--- a/styles/style.css
+++ b/styles/style.css
@@ -17,3 +17,78 @@
     font-size: 0.7rem;
 }
 
+/* hero section start */
+.hero-section{
+    display:flex;
+    justify-content: space-around;
+    align-items: center;
+    padding-top: 30px;
+}
+.title{
+    font-size: 3rem;
+    color: #3A3A3A;
+    padding-bottom: 0px;
+    margin-bottom: 0px;
+}
+.hero-title p {
+    font-size: 1rem;
+    color: #3A3A3A;
+    padding-top: 5px;
+    margin-top: 0px;
+}
+
+.hero-right{
+    background-image: url("../images/Circle\ design.svg");
+    background-size: cover;
+}
+
+.prebook{
+    background: #E02C6D;
+    border-radius: 41px;
+    color: #ffffff;
+    border: none;
+    padding: 5px 25px 5px 25px;
+}
+
+
+
+
+
+
+
+/* responsive mode start */
+@media screen and (max-width: 576px)
+    {
+    
+        .header-section{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            padding-left: 10px;
+            padding-right: 10px;
+    
+        }
+.hero-section{
+    display: flex;
+    flex-direction: column;
+    flex-direction: column-reverse;
+}
+.title{
+    font-size: 2rem;
+    padding-bottom: 0px;
+    margin-bottom: 0px;
+    text-align: center;
+} 
+.hero-title p {
+    font-size: 0.8rem;
+    padding-top: 5px;
+    margin-top: 0px;
+    text-align: center;
+}
+
+.btn1{
+    display: flex;
+justify-content: center;
+
+}
+    }
